# python-homework-itmo

./: README.md
homework_1/: README.md  cli.py  nl.py  pyproject.toml  tail.py  text_utils.py  wc.py
homework_1/artifacts/: nl.txt  tail.txt
homework_1/artifacts/results/: nl.txt  tail.txt  wc.txt
homework_2/: Dockerfile  README.md  main.py  pyproject.toml  run.sh
homework_2/artifacts/folder_1/: example_output.tex
homework_2/artifacts/folder_2/: url.txt
homework_3/: main.py  pyproject.toml
homework_3/artifacts/trd/: hash.txt
homework_4/: fibonacci.py  integrate_func.py  main.py  pyproject.toml
homework_4/artifacts/fst/: performance_results.txt
homework_4/artifacts/snd/: integration_performance.txt
